incorrect label on sharpness

--- a/notebooks/(clean) LUPI-NDP for damped coupled oscillators.ipynb
+++ b/notebooks/(clean) LUPI-NDP for damped coupled oscillators.ipynb
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,18 +1193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sharpness score with PI:  0.06377065550535917\n",
-      "Sharpness score without PI:  0.011210576095618308\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with torch.no_grad():\n",
     "    model.eval()\n",
@@ -1253,8 +1244,8 @@
     "    model.train()\n",
     "eval_sharpness = eval_sharpness/len(eval_loader)\n",
     "pi_sharpness = pi_sharpness/len(eval_loader)\n",
-    "print('Sharpness score with PI: ', eval_sharpness)\n",
-    "print('Sharpness score without PI: ', pi_sharpness)"
+    "print('Sharpness without PI: ', eval_sharpness)\n",
+    "print('Sharpness with PI: ', pi_sharpness)"
    ]
   },
   {
@@ -1324,21 +1315,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calibration score with PI:  1.1086109507683273\n",
-      "Calibration score without PI:  0.41891779592704864\n"
+      "Calibration error with PI:  1.1086109507683273\n",
+      "Calibration error without PI:  0.41891779592704864\n"
      ]
     }
    ],
    "source": [
-    "print('Calibration score with PI: ', (((pi_b[:-1]+pi_b[1:])/2 - pi_cum_mean)**2).sum())\n",
-    "print('Calibration score without PI: ', (((pi_b[:-1]+pi_b[1:])/2 - ev_cum_mean)**2).sum())"
+    "print('Calibration error with PI: ', (((pi_b[:-1]+pi_b[1:])/2 - pi_cum_mean)**2).sum())\n",
+    "print('Calibration error without PI: ', (((pi_b[:-1]+pi_b[1:])/2 - ev_cum_mean)**2).sum())"
    ]
   }
  ],
