added model saving

--- a/notebooks/(clean) LUPI-NDP for damped coupled oscillators.ipynb
+++ b/notebooks/(clean) LUPI-NDP for damped coupled oscillators.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,7 @@
     "import random\n",
     "\n",
     "import warnings\n",
+    "import datetime\n",
     "\n",
     "from copy import deepcopy\n",
     "\n",
@@ -565,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +616,8 @@
     "    'epochs' : 100,\n",
     "    'val_and_print' : 10,\n",
     "    'context_range' : [5,10],\n",
-    "    'target_range' : [15,51] # superset of context\n",
+    "    'target_range' : [15,51], # superset of context\n",
+    "    'save_model' : True\n",
     "}"
    ]
   },
@@ -848,7 +850,30 @@
     "                     total_epoch_loss/train_examples, recon_epoch_loss/train_examples,\n",
     "                     kl_epoch_loss/train_examples,val_recon/val_examples)\n",
     "            print(print_string)\n",
-    "            model.train()"
+    "            model.train()\n",
+    "\n",
+    "if config['save_model']:\n",
+    "    x = datetime.datetime.now()\n",
+    "    print('Saving model to'+'./saved_models/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
+    "    torch.save(model, './saved_models/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model to./saved_models/lupi-2021-02-11-1447\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print('Saving model to'+'./saved_models/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\"))"
    ]
   },
   {
