--- a/notebooks/(clean) LUPI-NDP for damped coupled oscillators.ipynb
+++ b/notebooks/(clean) LUPI-NDP for damped coupled oscillators.ipynb
@@ -1467,9 +1467,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:lupi]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-lupi-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1481,7 +1481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
