Done snes on frequency and renamed files

--- a/notebooks/LUPI-NDP for LV.ipynb
+++ b/notebooks/LUPI-NDP for LV.ipynb
@@ -909,10 +909,10 @@
     "\n",
     "if config['save_model']:\n",
     "    x = datetime.datetime.now()\n",
-    "    print('Saving model to '+'./saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
-    "    torch.save(model, './saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
-    "    print('Saving config to '+'./saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config')\n",
-    "    pickle.dump(config, open( './saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config.p', 'wb' ))"
+    "    print('Saving model to '+'./saves/'+config['model']+'-lv-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
+    "    torch.save(model, './saves/'+config['model']+'-lv-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
+    "    print('Saving config to '+'./saves/'+config['model']+'-lv-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config')\n",
+    "    pickle.dump(config, open( './saves/'+config['model']+'-lv-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config.p', 'wb' ))"
    ]
   },
   {
@@ -930,7 +930,7 @@
    ],
    "source": [
     "\n",
-    "print('Saving model to'+'./saved_models/'+config['model']+'-LV-'+x.strftime(\"%Y-%m-%d-%H%M\"))"
+    "print('Saving model to'+'./saved_models/'+config['model']+'-lv-'+x.strftime(\"%Y-%m-%d-%H%M\"))"
    ]
   },
   {
