--- a/notebooks/LUPI-NDP-sine_amplitude_shift.ipynb
+++ b/notebooks/LUPI-NDP-sine_amplitude_shift.ipynb
@@ -805,10 +805,10 @@
     "\n",
     "if config['save_model']:\n",
     "    x = datetime.datetime.now()\n",
-    "    print('Saving model to '+'./saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
-    "    torch.save(model, './saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
-    "    print('Saving config to '+'./saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config')\n",
-    "    pickle.dump(config, open( './saves/'+config['model']+'-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config.p', 'wb' ))"
+    "    print('Saving model to '+'./saves/'+config['model']+'-sineampshift-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
+    "    torch.save(model, './saves/'+config['model']+'-sineampshift-'+x.strftime(\"%Y-%m-%d-%H%M\"))\n",
+    "    print('Saving config to '+'./saves/'+config['model']+'-sineampshift-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config')\n",
+    "    pickle.dump(config, open( './saves/'+config['model']+'-sineampshift-'+x.strftime(\"%Y-%m-%d-%H%M\")+'-config.p', 'wb' ))"
    ]
   },
   {
