small changes to plotting labels

--- a/notebooks/Saved oscillator model evaluation.ipynb
+++ b/notebooks/Saved oscillator model evaluation.ipynb
@@ -832,9 +832,9 @@
     "      '±', '{:.5e}'.format(lupi_train_stderr_mean))\n",
     "print('LUPI model eval mode MSE  :', '{:.5e}'.format(lupi_eval_error_mean),\n",
     "      '±', '{:.5e}'.format(lupi_eval_stderr_mean))\n",
-    "print('noPI model train mode MSE :', '{:.5e}'.format(nopi_train_error_mean),\n",
+    "print('NoPI model train mode MSE :', '{:.5e}'.format(nopi_train_error_mean),\n",
     "      '±', '{:.5e}'.format(nopi_train_stderr_mean))\n",
-    "print('noPI model eval mode MSE  :', '{:.5e}'.format(nopi_eval_error_mean),\n",
+    "print('NoPI model eval mode MSE  :', '{:.5e}'.format(nopi_eval_error_mean),\n",
     "      '±','{:.5e}'.format( nopi_eval_stderr_mean))\n"
    ]
   },
@@ -875,8 +875,8 @@
     "\n",
     "print('LUPI model train mode sharpness :', '{:.5e}'.format(lupi_train_sharpness_mean))\n",
     "print('LUPI model eval mode sharpness  :', '{:.5e}'.format(lupi_eval_sharpness_mean))\n",
-    "print('noPI model train mode sharpness :', '{:.5e}'.format(nopi_train_sharpness_mean))\n",
-    "print('noPI model eval mode sharpness  :', '{:.5e}'.format(nopi_eval_sharpness_mean))"
+    "print('NoPI model train mode sharpness :', '{:.5e}'.format(nopi_train_sharpness_mean))\n",
+    "print('NoPI model eval mode sharpness  :', '{:.5e}'.format(nopi_eval_sharpness_mean))"
    ]
   },
   {
@@ -901,10 +901,10 @@
     "f = plt.figure()\n",
     "\n",
     "plt.hist(lupi_eval_sharpness, bins=50, density=True, range=(0.,0.1), color='#1b9e77', alpha=0.3, label='LUPI context only')\n",
-    "plt.hist(nopi_eval_sharpness, bins=50, density=True, range=(0.,0.1), color='#e7298a', alpha=0.3, label='noPI context only')\n",
+    "plt.hist(nopi_eval_sharpness, bins=50, density=True, range=(0.,0.1), color='#e7298a', alpha=0.3, label='NoPI context only')\n",
     "\n",
     "plt.axvline(x=lupi_eval_sharpness_mean, ls='--', color='#1b9e77', label='LUPI mean')\n",
-    "plt.axvline(x=nopi_eval_sharpness_mean, ls='--', color='#e7298a', label='noPI mean')\n",
+    "plt.axvline(x=nopi_eval_sharpness_mean, ls='--', color='#e7298a', label='NoPI mean')\n",
     "\n",
     "plt.legend()\n",
     "plt.title('Histogram of uncertainty estimates for the oscillators task')\n",
@@ -1013,9 +1013,9 @@
     "      '±', '{:.5e}'.format(lupi_train_calibration_error_stderr))\n",
     "print('LUPI model eval mode calibration error  :', '{:.5e}'.format(lupi_eval_calibration_error_mean),\n",
     "      '±', '{:.5e}'.format(lupi_eval_calibration_error_stderr))\n",
-    "print('noPI model train mode calibration error :', '{:.5e}'.format(nopi_train_calibration_error_mean),\n",
+    "print('NoPI model train mode calibration error :', '{:.5e}'.format(nopi_train_calibration_error_mean),\n",
     "      '±', '{:.5e}'.format(nopi_train_calibration_error_stderr))\n",
-    "print('noPI model eval mode calibration error  :', '{:.5e}'.format(nopi_eval_calibration_error_mean),\n",
+    "print('NoPI model eval mode calibration error  :', '{:.5e}'.format(nopi_eval_calibration_error_mean),\n",
     "      '±','{:.5e}'.format(nopi_eval_calibration_error_stderr))"
    ]
   },
@@ -1292,13 +1292,13 @@
     "\n",
     "ax1.plot(times.squeeze()[:-1], lupi_train_mean.numpy()[:,0], c='#d95f02', label='LUPI with PI+targets')\n",
     "ax2.plot(times.squeeze()[:-1], lupi_eval_mean.numpy()[:,0], c='#1b9e77', label='LUPI with context only')\n",
-    "ax3.plot(times.squeeze()[:-1], nopi_train_mean.numpy()[:,0], c='#7570b3', label='noPI with targets')\n",
-    "ax4.plot(times.squeeze()[:-1], nopi_eval_mean.numpy()[:,0], c='#e7298a', label='noPI with context only')\n",
+    "ax3.plot(times.squeeze()[:-1], nopi_train_mean.numpy()[:,0], c='#7570b3', label='NoPI with targets')\n",
+    "ax4.plot(times.squeeze()[:-1], nopi_eval_mean.numpy()[:,0], c='#e7298a', label='NoPI with context only')\n",
     "\n",
     "ax1.set_title('LUPI with PI & targets', fontsize=10)\n",
     "ax2.set_title('LUPI with context only', fontsize=10)\n",
-    "ax3.set_title('noPI with targets', fontsize=10)\n",
-    "ax4.set_title('noPI with context only', fontsize=10)\n",
+    "ax3.set_title('NoPI with targets', fontsize=10)\n",
+    "ax4.set_title('NoPI with context only', fontsize=10)\n",
     "\n",
     "ax1.set_xticks([])\n",
     "ax2.set_xticks([])\n",
