--- a/notebooks/exp_evaluations.ipynb
+++ b/notebooks/exp_evaluations.ipynb
@@ -851,11 +851,11 @@
     "plt.axvline(x=nopi_eval_sharpness_mean, ls='--', color='#e7298a', label='NoPI mean')\n",
     "\n",
     "plt.legend()\n",
-    "plt.title('Histogram of uncertainty estimates for the oscillators task')\n",
+    "plt.title('Histogram of uncertainty estimates for the exponentials task')\n",
     "plt.xlabel('Predicted standard deviations')\n",
     "plt.ylabel('Density')\n",
     "\n",
-    "f.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'oscillators_sharpness.pdf', bbox_inches='tight')\n",
+    "f.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'exp_sharpness.pdf', bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
@@ -1004,11 +1004,11 @@
     "\n",
     "plt.legend()\n",
     "\n",
-    "plt.title('Calibration on the oscillators task')\n",
+    "plt.title('Calibration on the exponentials task')\n",
     "plt.xlabel('Expected Confidence Interval')\n",
     "plt.ylabel('Observed Confidence Interval')\n",
     "\n",
-    "f.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'oscillators_calibration_caps.pdf', bbox_inches='tight')\n",
+    "f.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'exp_calibration_caps.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1084,11 +1084,11 @@
     "\n",
     "plt.legend()\n",
     "\n",
-    "plt.title('Calibration on the oscillators task')\n",
+    "plt.title('Calibration on the exponentials task')\n",
     "plt.xlabel('Expected Confidence Interval')\n",
     "plt.ylabel('Observed Confidence Interval')\n",
     "\n",
-    "f.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'oscillators_calibration_shaded.pdf', bbox_inches='tight')\n",
+    "f.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'exp_calibration_shaded.pdf', bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -1276,9 +1276,9 @@
     "#                  nopi_eval_mean.numpy()[:,0]-2*nopi_eval_std.numpy()[:,0],\n",
     "#                  nopi_eval_mean.numpy()[:,0]+2*nopi_eval_std.numpy()[:,0], color='#e7298a', alpha=0.1)\n",
     "\n",
-    "fig.suptitle('Predictions on an oscillators task example')\n",
+    "fig.suptitle('Predictions on an exponentials task example')\n",
     "\n",
-    "fig.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'oscillators_example_predictions.pdf', bbox_inches='tight')\n",
+    "fig.savefig(time_save.strftime(\"%Y-%m-%d-%H%M\")+'exp_example_predictions.pdf', bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
